<resources>
    <string name="app_name">Intents_Exercise</string>
    <string name="writeHint">Escribe aquí</string>
    <string name="open">Abrir</string>
    <string name="share">Compartir</string>
    <string name="email">Enviar e-mail</string>
    <string name="web">Abrir web</string>
    <string name="maps">Abrir maps</string>
    <string name="save">Guardar cambios</string>
    <string name="times">Ver veces</string>
    <string name="timesCounter">Has entrado</string>
    <string name="timesCounter2">veces</string>

</resources>
