<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/happyface"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/write"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="@string/writeHint" />

        <EditText
            android:id="@+id/writeNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="@string/writeHint"
            android:inputType="number"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:background="@color/pink"
            android:onClick="buttonOpenPressed"
            android:text="@string/open" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@color/pink"
                android:onClick="buttonSharePressed"
                android:text="@string/share"
                android:textColor="@color/white" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@color/pink"
                android:textColor="@color/white"
                android:onClick="buttonEmailPressed"
                android:text="@string/email" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@color/pink"
                android:textColor="@color/white"
                android:onClick="buttonWebPressed"
                android:text="@string/web" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@color/pink"
                android:textColor="@color/white"
                android:onClick="buttonMapsPressed"
                android:text="@string/maps" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>